package mundial;

import java.util.ArrayList;

public class Llave extends EtapaMundial{

    Llave(){
        super();
    }

    @Override
    public ArrayList<Partido> getPartidos() {
        return super.getPartidos();
    }

    @Override
    public ArrayList<Equipo> getEquiposQueAvanzan() {
        return super.getEquiposQueAvanzan();
    }
}

